# document-edit-mcp

./: .gitignore  CHANGELOG.md  CLAUDE_INTEGRATION.md  Dockerfile  LICENSE  PULL_REQUEST.md  README.md  claude_desktop_config.json  pyproject.toml  requirements.txt  run.py  run.sh  setup.sh  smithery.yaml  start_server.sh  test_client.py  test_server.sh  verify.py
claude_document_mcp/: __init__.py  __main__.py  server.py
scripts/: install_dependencies.bat
tests/: test_formatted_documents.py
