[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-document-mcp"
version = "0.1.0"
description = "Model Context Protocol server for document operations with Claude Desktop"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    "mcp[cli]>=1.5.0",
    "python-docx>=0.8.11",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "reportlab>=3.6.0",
    "pdf2docx>=0.5.6",
    "docx2pdf>=0.1.8"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0"
]

[tool.hatch.build.targets.wheel]
packages = ["claude_document_mcp"]
