[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-document-mcp"
version = "0.2.0"
description = "Model Context Protocol server for document operations with Claude Desktop"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Alejandro Ballesteros", email = "alejandro@example.com" },
    { name = "Philippe Nussbaumer", email = "philippe@valeureux.com" }
]

keywords = ["mcp", "claude", "word", "excel", "pdf", "document", "automation"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp[cli]>=1.5.0",
    "python-docx>=0.8.11",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "reportlab>=3.6.0",
    "pdf2docx>=0.5.6",
    "docx2pdf>=0.1.8"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=6.0.0"
]

[project.urls]
Homepage = "https://github.com/alejandroBallesterosC/document-edit-mcp"
Repository = "https://github.com/alejandroBallesterosC/document-edit-mcp"
Issues = "https://github.com/alejandroBallesterosC/document-edit-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["claude_document_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
